k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pygeoapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pygeoapi
  template:
    metadata:
      labels:
        app: pygeoapi
    spec:
      containers:
      - name: pygeoapi
        image: geopython/pygeoapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /pygeoapi/local.config.yml
          subPath: local.config.yml
      volumes:
      - name: config-volume
        configMap:
          name: pygeoapi-config
