k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pygeoapi
  namespace: default
spec:
  selector:
    app: pygeoapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
