k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pygeoapi-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pygeoapi.local
      secretName: pygeoapi-tls
  rules:
  - host: pygeoapi.local  # <-- configure your /etc/hosts or DNS accordingly
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pygeoapi
            port:
              number: 80
